# Laced

./: .env  .gitignore  Jenkinsfile  docker-compose.production.yaml  docker-compose.yaml
backend/: pre-commit-config.yml  pyproject.toml  requirements.txt
backend/server/: .env.dev  .env.prod  db.sqlite3  manage.py  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
backend/server/app/management/: tm.py  urls.py  views.py
backend/server/app/product/: admin.py  middleware.py  models.py  permissions.py  serializers.py  session_views.py  signals.py  urls.py  val.py  validators.py  views.py
backend/server/app/purchases/: admin.py  models.py  serializers.py  service.py  service_new.py  urls.py  views.py  views_new.py
backend/server/app/user/: admin.py  apps.py  middleware.py  models.py  serializers.py  signals.py  views.py
backend/server/assets/styles/: index.min.css  styles.css
backend/server/req_parse/: main.py  proxy.py  scrapper.py
backend/server/scrapper/: 44 copy 2.json  44 copy.json  Free_Proxy_List-0.json  Free_Proxy_List-1.json  Free_Proxy_List-2.json  Free_Proxy_List-3.json  Free_Proxy_List-4.json  Free_Proxy_List-5.json  Free_Proxy_List-6.json  Free_Proxy_List-7.json  available_variation_option copy.json  generator.py  main.py  modified3 copy.json  product_variation_option.json  scrapper copy.py  scrapper.py  set_list.py  tr.json  tr.py  trash.py  ttr.json  variation_option.json
backend/server/scrapper/categories_series/: adidas_categories.json  (+11 more)
backend/server/server/: asgi.py  settings.py  settings2.py  urls.py  wsgi.py
(+92 files in other folders)
