[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["daron035 <kamil249@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
djoser = "^2.2.0"
django-cors-headers = "^4.2.0"
django-stubs = "^4.2.4"
pillow = "^10.0.1"
psycopg2 = "^2.9.7"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"
requests = "^2.31.0"
selenium = "^4.12.0"
webdriver-manager = "^4.0.0"
selenium-wire = "^5.1.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
